--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -682,6 +682,6 @@ ul.menu-list li:last-child{
 }
 .footer .content ul li:hover{
     transition: 0.5s;
-    color: #745cf9;
+    color: #654bf7;
 }
 /* End Footer */
